Beginnig Java Scrip for Audio

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,8 @@
     "liveSassCompile.settings.autoprefix": [
         "> 1%",
         "last 2 versions"
+    ],
+    "cSpell.words": [
+        "dwyer's"
     ]
 }
